# media_provider

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/media_player/: CMakeLists.txt
examples/media_player/qml/: VideoSettings.qml  main.qml  qml.qrc  qtquickcontrols2.conf
examples/media_player/src/: backend.cpp  backend.h  main.cpp
include/media_provider/: media_provider.h
src/: dalsa_lnx_buffer_processing.cpp  dalsa_lnx_buffer_processing.h  dalsa_lnx_provider.cpp  dalsa_lnx_provider.h  dalsa_lnx_resource.cpp  dalsa_lnx_resource.h  dalsa_lnx_stream.cpp  dalsa_lnx_stream.h  dalsa_win_buffer_processing.cpp  dalsa_win_buffer_processing.h  dalsa_win_provider.cpp  dalsa_win_provider.h  dalsa_win_resource.cpp  dalsa_win_resource.h  dalsa_win_shortcuts.cpp  dalsa_win_shortcuts.h  dalsa_win_stream.cpp  dalsa_win_stream.h  file_based_provider.cpp  file_based_provider.h  image_provider.cpp  image_provider.h  image_resource.cpp  image_resource.h  image_stream.cpp  image_stream.h  media_provider.cpp  qmediaplayer_based_resource.cpp  qmediaplayer_based_resource.h  rtsp_provider.cpp  rtsp_provider.h  rtsp_resource.cpp  rtsp_resource.h  rtsp_stream.cpp  rtsp_stream.h  sapera_lnx_buffer_processing.cpp  sapera_lnx_provider.cpp  sapera_lnx_resource.cpp  sapera_lnx_stream.cpp  sapera_lnx_stream.h  (+18 more)
test/: CMakeLists.txt  tst_image_provider.cpp  tst_rtsp_provider.cpp  tst_sapera_provider.cpp  tst_video_provider.cpp
